--- a/recipe-sharing-platform/src/index.css
+++ b/recipe-sharing-platform/src/index.css
@@ -1,3 +1,9 @@
+/* stylelint-disable */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* stylelint-enable */
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
